Add white title background as commented out alternative for printing

--- a/beamerthemeWelitsch.sty
+++ b/beamerthemeWelitsch.sty
@@ -48,9 +48,10 @@
 \setbeamercolor{section in toc}{fg=black,bg={}}
 \setbeamercolor{subsection in toc}{fg=black,bg={}}
 \setbeamercolor{structure}{fg=i4blue,bg={}}
-% more light frame title background for better black/white look regarding
-% printing
-%\setbeamercolor{titlelike}{bg=structure!20!white}
+
+% for grayscale printing: more light or even white frame title background
+%\setbeamercolor{titlelike}{bg=structure!10!white}
+%\setbeamercolor{titlelike}{bg=white}
 
 % itemize
 % Tills' opinion: should be done in an inner theme, not here.
