Add commented out settings for numbered captions and bibliography items

--- a/beamerthemeWelitsch.sty
+++ b/beamerthemeWelitsch.sty
@@ -76,6 +76,13 @@
 \setbeamertemplate{enumerate subsubitem}{\theenumiii}
 %\setbeamertemplate{enumerate item}{\insertenumlabel}
 
+% number captions of figures etc.
+%\setbeamertemplate{caption}[numbered]
+
+% for larger bibliographies, numbered items may be better than just a book
+% image
+%\setbeamertemplate{bibliography item}[text]
+
 % disable navigation symbols
 \setbeamertemplate{navigation symbols}{}
 
